--- a/capitulo1.html
+++ b/capitulo1.html
@@ -10,7 +10,7 @@
 
   <!-- 🎬 Intro en pantalla completa -->
   <div id="introOverlay">
-    <video id="introVideo" poster="assets/img/poster1.jpg" playsinline autoplay muted>
+    <video id="introVideo" playsinline autoplay muted>
       <source src="videos/arco1ep1.mp4" type="video/mp4">
       Tu navegador no soporta video HTML5.
     </video>
