--- a/capitulos.html
+++ b/capitulos.html
@@ -9,8 +9,8 @@
 
 </head>
 <body>
-    <button class="btn-back" onclick="history.back()">⬅ Volver</button>
-  <main>
+<button class="btn-back" onclick="location.href='elbarrio.html'">⬅ Volver</button>  <main>
+
     <h1>📚 ARCO 1: Nunca Confíes En La Confianza</h1>
     <p>Selecciona un capítulo para continuar la historia.</p>
 
