arreglo de elizabethO

--- a/anuario.html
+++ b/anuario.html
@@ -149,7 +149,7 @@
             <section class="anuario-item-scroll">
                 <div class="anuario-item">
                     <img src="images/lizbeth.jpg" alt="Personaje 3">
-                    <h2>Elizabeth</h2>
+                    <h2>Lizbeth</h2>
                     <p>A veces ser la mejor amiga duele más que ser la persona amada.</p>
                     <div class="custom-audio">
                         <button class="btn-audio" onclick="togglePlay(this)">▶️ Reproducir</button>
