--- a/arco1/capitulo1.html
+++ b/arco1/capitulo1.html
@@ -4,21 +4,21 @@
   <meta charset="UTF-8">
   <title>Capítulo 1 - Arco 1</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/cap.css">
+  <link rel="stylesheet" href="../css/cap.css">
 </head>
 <body>
 
   <!-- 🎬 Intro en pantalla completa -->
   <div id="introOverlay">
     <video id="introVideo" playsinline autoplay muted>
-      <source src="videos/arco1ep1.mp4" type="video/mp4">
+      <source src="../videos/arco1ep1.mp4" type="video/mp4">
       Tu navegador no soporta video HTML5.
     </video>
   </div>
   <h1 class="titulo-principal pantalla-completa">La Hamburguesa</h1>
   <!-- 📖 Contenido del capítulo -->
 
-  <section class="bloque" data-audio="audios/ep1m1.mp3" type="audio/mp3"  data-efecto="8D">
+  <section class="bloque" data-audio="../audios/arco1/ep1m1.mp3" type="audio/mp3"  data-efecto="8D">
   <p class="flashback"><span class="etiqueta">[Noche 31 de Diciembre]</span> Fiesta de fin de año.</p>
   <p class="narracion">Joaquin despierta en medio de la fiesta. Todo está borroso, la música suena distorsionada y las luces de colores parpadean sin sentido. Tiene la boca seca y la cabeza le da vueltas. Al parecer le dieron algo de tomar, pero no logra recordar con claridad. <em>¿Dónde estoy?</em></p>
   <p class="dialogo"><span class="nombre">Elena:</span> ¿Estás bien?</p>
@@ -97,7 +97,7 @@
   <p class="dialogo"><span class="nombre">Lizbeth:</span> A veces, te das cuenta de cómo es una persona... y terminas tan decepcionada que ni siquiera quieres verla otra vez. El querer y el odiar... son sentimientos parecidos cuando hay mucha pasión. Dolorosos, intensos. <em>—respondió sin despegar la mirada del techo.</em></p>
 </section>
 
-<section class="bloque" data-audio="audios/ep1m2.mp3" type="audio/mp3" >
+<section class="bloque" data-audio="../audios/arco1/ep1m2.mp3" type="audio/mp3" >
   <p class="narracion">Al poco rato aparecieron tres chicos con un balón en la mano.</p>
   <p class="dialogo"><span class="nombre">Lizbeth:</span> Te presento a ellos: Max, Alberto y Luis <em>—murmuró con cierto rencor en la mirada.</em></p>
   <p class="dialogo"><span class="nombre">Max:</span> ¿Qué pasa, gente? ¿No van a jugar? <em>—preguntó en tono retador.</em></p>
@@ -189,38 +189,38 @@
   <p class="dialogo"><span class="nombre">Yair:</span> Cuida las cosas, mano. Y calcula el tiempo. <em>—le encargó.</em></p>
   <p class="dialogo"><span class="nombre">Joaquin:</span> Okey... anda, juega nomás. <em>—respondió, tratando de ocultar su tristeza.</em></p>
 
-  <p class="narracion">Ya eran casi las 6:30. Elizabeth y su mamá, sacaban su carrito sanguchero y desde lejos notaron a Joaquin, sentado solo, mirando cómo los demás jugaban.</p>
-  <p class="dialogo"><span class="nombre">Elizabeth:</span> Mamá, ¿me parece o Joaquin está ahí todo incómodo y avergonzado? <em>—dijo con preocupación.</em></p>
+  <p class="narracion">Ya eran casi las 6:30. Lizbeth y su mamá, sacaban su carrito sanguchero y desde lejos notaron a Joaquin, sentado solo, mirando cómo los demás jugaban.</p>
+  <p class="dialogo"><span class="nombre">Lizbeth:</span> Mamá, ¿me parece o Joaquin está ahí todo incómodo y avergonzado? <em>—dijo con preocupación.</em></p>
   <p class="dialogo"><span class="nombre">Mali:</span> Mmm, parece que sí. Ayúdame a dejar esto y llámalo para que venga. <em>—respondió.</em></p>
-  <p class="dialogo"><span class="nombre">Elizabeth:</span> Ya, mamá... ¡JOAQUIN! <em>—gritó con energía.</em></p>
+  <p class="dialogo"><span class="nombre">Lizbeth:</span> Ya, mamá... ¡JOAQUIN! <em>—gritó con energía.</em></p>
 
-  <p class="narracion">Elizabeth tomó su celular y caminó hasta la cancha. Al llegar donde Joaquin, lo miró fijo, sonriendo, e intentó convencerlo de que fuera con ella al puesto de comida, para que no se quedara solo.</p>
+  <p class="narracion">Lizbeth tomó su celular y caminó hasta la cancha. Al llegar donde Joaquin, lo miró fijo, sonriendo, e intentó convencerlo de que fuera con ella al puesto de comida, para que no se quedara solo.</p>
   
-  <p class="dialogo"><span class="nombre">Elizabeth:</span> ¿Todo bien? <em>—preguntó algo preocupada.</em></p>
+  <p class="dialogo"><span class="nombre">Lizbeth:</span> ¿Todo bien? <em>—preguntó algo preocupada.</em></p>
   <p class="dialogo"><span class="nombre">Joaquin:</span> Sí, bueno... no. La verdad que no. Sentí como un rechazo y el trato fue extrañamente feo. <em>—respondió triste.</em></p>
-  <p class="dialogo"><span class="nombre">Elizabeth:</span> ¿Qué te dijeron? <em>—insistió.</em></p>
+  <p class="dialogo"><span class="nombre">Lizbeth:</span> ¿Qué te dijeron? <em>—insistió.</em></p>
   <p class="dialogo"><span class="nombre">Joaquin:</span> Entiendo que solo era para seis jugadores, pero no fue la forma en que me habló Yair. <em>—contestó con firmeza.</em></p>
-  <p class="dialogo"><span class="nombre">Elizabeth:</span> Por eso no me cae, se comporta como un niño mimado. Pero tranqui, mejor jugamos cartas. <em>—dijo para animarlo.</em></p>
+  <p class="dialogo"><span class="nombre">Lizbeth:</span> Por eso no me cae, se comporta como un niño mimado. Pero tranqui, mejor jugamos cartas. <em>—dijo para animarlo.</em></p>
   <p class="dialogo"><span class="nombre">Joaquin:</span> Solo sé jugar solitario. <em>—bromeó.</em></p>
-  <p class="dialogo"><span class="nombre">Elizabeth:</span> Jajaja, juguemos 8 locos. <em>—propuso.</em></p>
+  <p class="dialogo"><span class="nombre">Lizbeth:</span> Jajaja, juguemos 8 locos. <em>—propuso.</em></p>
   <p class="dialogo"><span class="nombre">Joaquin:</span> ¿8 locos? ¿Cómo se juega? <em>—preguntó curioso.</em></p>
-  <p class="dialogo"><span class="nombre">Elizabeth:</span> Te explico. <em>—sonrió mientras empezaba a ordenar las cartas.</em></p>
-  <p class="narracion">Elizabeth le explicó las reglas poco a poco hasta que llegó Jesús acompañado de Elena.</p>
-  <p class="dialogo"><span class="nombre">Elizabeth:</span> ¡Gané! <em>—celebró levantando las manos.</em></p>
+  <p class="dialogo"><span class="nombre">Lizbeth:</span> Te explico. <em>—sonrió mientras empezaba a ordenar las cartas.</em></p>
+  <p class="narracion">Lizbeth le explicó las reglas poco a poco hasta que llegó Jesús acompañado de Elena.</p>
+  <p class="dialogo"><span class="nombre">Lizbeth:</span> ¡Gané! <em>—celebró levantando las manos.</em></p>
   <p class="dialogo"><span class="nombre">Jesus:</span> Épico, 8 locos, mi juego favorito. <em>—comentó con entusiasmo.</em></p>
   <p class="dialogo"><span class="nombre">Elena:</span> Y siempre pierdes. Jajaja. <em>—bromeó, haciendo reír a todos.</em></p>
   <p class="dialogo"><span class="nombre">Jesus:</span> ¿Ah, pero y Rosangela? <em>—preguntó de pronto.</em></p>
-  <p class="dialogo"><span class="nombre">Elizabeth:</span> Tú y tu obsesión con mi prima. <em>—comentó rodando los ojos.</em></p>
+  <p class="dialogo"><span class="nombre">Lizbeth:</span> Tú y tu obsesión con mi prima. <em>—comentó rodando los ojos.</em></p>
   <p class="dialogo"><span class="nombre">Joaquin:</span> ¿Contexto? <em>—preguntó.</em></p>
   <p class="dialogo"><span class="nombre">Elena:</span> Nuestro querido Jesús está templado de Rosangela, y ella ni lo pela. <em>—explicó divertida.</em></p>
-  <p class="dialogo"><span class="nombre">Elizabeth:</span> Si supieras todo lo que hizo antes... por eso verás que siempre lo molestamos. <em>—añadió.</em></p>
+  <p class="dialogo"><span class="nombre">Lizbeth:</span> Si supieras todo lo que hizo antes... por eso verás que siempre lo molestamos. <em>—añadió.</em></p>
   <p class="dialogo"><span class="nombre">Jesus:</span> Ya, oh, no cuenten de más. <em>—dijo avergonzado.</em></p>
   <p class="dialogo"><span class="nombre">Elena:</span> Ya suéltala, no te hará caso. <em>—comentó.</em></p>
   <p class="dialogo"><span class="nombre">Jesus:</span> Algún día será. <em>—murmuró.</em></p>
-  <p class="dialogo"><span class="nombre">Elizabeth:</span> Algún día te darás cuenta que no. <em>—respondió con firmeza.</em></p>
+  <p class="dialogo"><span class="nombre">Lizbeth:</span> Algún día te darás cuenta que no. <em>—respondió con firmeza.</em></p>
   <p class="dialogo"><span class="nombre">Joaquin:</span> Vaya, vaya... pues con todo, Jesús. <em>—bromeó.</em></p>
   <p class="narracion">En ese momento llegó Rosangela cargando varias bolsas, acompañada de dos amigas. Automáticamente Jesús bajó la mirada hacia su teléfono para disimular.</p>
-  <p class="dialogo"><span class="nombre">Elizabeth:</span> ¡Por fin! Holi, Isabel, Selena. <em>—saludó agitando la mano.</em></p>
+  <p class="dialogo"><span class="nombre">Lizbeth:</span> ¡Por fin! Holi, Isabel, Selena. <em>—saludó agitando la mano.</em></p>
   <p class="dialogo"><span class="nombre">Selena:</span> Hola, no sabes lo horrible que está el tráfico. <em>—dijo agotada.</em></p>
   <p class="dialogo"><span class="nombre">Elena:</span> Me imagino... ¿pero qué compraron? <em>—preguntó con curiosidad.</em></p>
   <p class="dialogo"><span class="nombre">Isabel:</span> Ropa para el cumple de Rosangela. <em>—respondió con una sonrisa.</em></p>
@@ -232,7 +232,7 @@
   <p class="dialogo"><span class="nombre">Rosangela:</span> Ah, hola. <em>—respondió rápidamente mientras entraba con sus amigas.</em></p>
   <p class="dialogo"><span class="nombre">Elena:</span> Pum, golpe directo. <em>—bromeó.</em></p>
   <p class="dialogo"><span class="nombre">Jesus:</span> Sé que algún día caerá. <em>—insistió.</em></p>
-  <p class="dialogo"><span class="nombre">Elizabeth:</span> Ay... <em>—murmuró con un sollozo, como si ocultara algo.</em></p>
+  <p class="dialogo"><span class="nombre">Lizbeth:</span> Ay... <em>—murmuró con un sollozo, como si ocultara algo.</em></p>
 
   <p class="flashback"><span class="etiqueta">[1 de enero]</span> Interrogatorio.</p>
   <p class="dialogo"><span class="nombre">Sam:</span> Según este chat de WhatsApp, vemos que le comentas a Joaquin que te gusta Jesus. <em>—dijo mostrando las capturas.</em></p>
@@ -243,8 +243,8 @@
   <p class="dialogo"><span class="nombre">Sam:</span> Entonces explícame por qué en esta parte dices: "No puedo permitir que el lo sepa".</p>
   <p class="narracion">Lizbeth se quedó helada, sin saber qué responder.</p>
   <p class="flashback"><span class="etiqueta">[Noche 31 de diciembre]</span> Fiesta de fin de año.</p>
-  <p class="narracion">Lizbeth intentaba, una y otra vez, llamar a Elizabeth fuera de la fiesta. El ruido de la música se mezclaba con sus latidos acelerados, cuando de pronto el eco desgarrador de una sirena rompió la noche. Una ambulancia pasó como un rayo y se detuvo justo frente a la entrada. Personas comenzaron a salir de la nada, corriendo, gritando, mientras la confusión la envolvía por completo. Con las manos temblorosas sacó su celular y la pantalla iluminó su rostro con un nuevo mensaje.</p>
-  <p class="dialogo"><span class="nombre">Lizbeth:</span> ¡Contéstame, Elizabeth...! <em>—murmuró con la voz quebrada, mientras el teléfono seguía timbrando, interminable, como un grito de auxilio ignorado.</em></p>
+  <p class="narracion">Lizbeth intentaba, una y otra vez, llamar a Lizbeth fuera de la fiesta. El ruido de la música se mezclaba con sus latidos acelerados, cuando de pronto el eco desgarrador de una sirena rompió la noche. Una ambulancia pasó como un rayo y se detuvo justo frente a la entrada. Personas comenzaron a salir de la nada, corriendo, gritando, mientras la confusión la envolvía por completo. Con las manos temblorosas sacó su celular y la pantalla iluminó su rostro con un nuevo mensaje.</p>
+  <p class="dialogo"><span class="nombre">Lizbeth:</span> ¡Contéstame, Lizbeth...! <em>—murmuró con la voz quebrada, mientras el teléfono seguía timbrando, interminable, como un grito de auxilio ignorado.</em></p>
   <p class="dialogo"><span class="nombre">Selena:</span> ¿Lizbeth? ¿Dónde estabas? ¡Ha ocurrido un accidente! <em>—gritó agitadamente, con los ojos desbordados de desesperación al verla.</em></p>
   <p class="narracion">De repente, otro mensaje apareció en la pantalla. Era de Dorian. Su respiración se detuvo mientras leía: <em>“Lizbeth, ¿dónde estabas? Prima, ven al techo. Jesús está muerto”.</em> La frase la atravesó como un cuchillo. Sintió que el suelo desaparecía bajo sus pies, que la fiesta entera se apagaba de golpe, y un dolor inexplicable, oscuro y brutal, se apoderaba de su pecho mientras sus manos dejando caer el teléfono.</p>
 
@@ -256,17 +256,17 @@
 <h1 class="titulo-principal pantalla-completa">CONTINARA..</h1>
 
 <div id="outroOverlay" class="overlay hidden">
-  <video id="outroVideo" src="videos/fincap1.mp4" autoplay muted playsinline></video>
+  <video id="outroVideo" src="../videos/fincap1.mp4" autoplay muted playsinline></video>
   <div id="outroButtons" class="hidden">
   <button id="btnPrev" disabled>⏮ Anterior</button>
   <button id="btnNext" disabled>⏭ Siguiente</button>
-  <button onclick="location.href='capitulos.html'">📖 Menú de capítulos</button>
+  <button onclick="location.href='../capitulos.html'">📖 Menú de capítulos</button>
   </div>
 </div>
 
 
 </body>
 </html>
- <script src="js/capitulos.js"></script>
+ <script src="../js/capitulos.js"></script>
 </body>
 </html>
