--- a/elbarrio.html
+++ b/elbarrio.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/biblioteca.css">
 </head>
 <body>
-    <button class="btn-back" onclick="history.back()">⬅ Volver</button>
+   <button class="btn-back" onclick="location.href='index.html'">⬅ Volver</button>
   <main>
     <h1>📖 El Barrio</h1>
     <p>Elige un libro para comenzar tu viaje narrativo.</p>
