--- a/capitulos.html
+++ b/capitulos.html
@@ -16,7 +16,7 @@
 
     <div class="capitulos">
       <!-- Capítulos generados manualmente -->
-    <div class="cap-card"><h3>Capítulo 1</h3><p>La hamburguesa: Todo puede empezar de una forma tan inesperada… incluso como un simple bocado..</p><button onclick="location.href='capitulo1.html'">Leer</button></div>
+    <div class="cap-card"><h3>Capítulo 1</h3><p>La hamburguesa: Todo puede empezar de una forma tan inesperada… incluso como un simple bocado..</p><button onclick="location.href='arco1/capitulo1.html'">Leer</button></div>
     <div class="cap-card"><h3>Capítulo 2</h3><p>El parque</p><button class="disabled" disabled>Bloqueado</button></div>
     <div class="cap-card"><h3>Capítulo 3</h3><p>Noche de locura</p><button class="disabled" disabled>Bloqueado</button></div>
     <div class="cap-card"><h3>Capítulo 4</h3><p>Vistas de noche</p><button class="disabled" disabled>Bloqueado</button></div>
