arreglo de capitulo 1 y avanzes del 2O

--- a/arco1/capitulo1.html
+++ b/arco1/capitulo1.html
@@ -14,6 +14,7 @@
       <source src="../videos/arco1ep1.mp4" type="video/mp4">
       Tu navegador no soporta video HTML5.
     </video>
+      <button id="skipIntro" class="skip-btn">Saltar Intro</button>
   </div>
   <h1 class="titulo-principal pantalla-completa">La Hamburguesa</h1>
   <!-- 📖 Contenido del capítulo -->
@@ -82,7 +83,7 @@
   <p class="dialogo"><span class="nombre">Yair:</span> ¡Qué tal! Soy Yair. Vivo a dos casas de aquí. Ya te había visto pasar alguna vez.</p>
   <p class="dialogo"><span class="nombre">Elena:</span> Saludos, soy Elena. Creo que ya te había visto antes… aunque estabas más chiquito. <em>—soltó entre risas, intentando romper el hielo.</em></p>
   <p class="dialogo"><span class="nombre">Lizbeth:</span> Faltan algunos más, pero... sinceramente, son medio raritos. Ya los conocerás con calma. <em>—añadió entre carcajadas.</em></p>
-  <p class="narracion">El ambiente se volvió más ligero, y poco a poco Joaquín comenzó a relajarse. Sentía que, por primera vez en mucho tiempo, estaba en el lugar correcto. Ya cerca de las 11:00 p.m., el grupo se fue dispersando. Al final, solo quedaron Joaquín, Rosángela y Jesús.</p>
+  <p class="narracion">El ambiente se volvió más ligero, y poco a poco Joaquín comenzó a relajarse. Sentía que, por primera vez en mucho tiempo, estaba en el lugar correcto. Ya cerca de las 11:00 p.m., el grupo se fue dispersando. Al final, solo quedaron Joaquín, Lizbeth y Jesús.</p>
   <p class="dialogo"><span class="nombre">Jesús:</span> ¿Y qué tal? Espero que te hayamos caído bien, ¿ah? <em>—comentó riendo mientras se estiraba.</em></p>
   <p class="dialogo"><span class="nombre">Lizbeth:</span> ¡Ya no me lo espantes, Jesús! <em>—bromeó dándole un leve codazo.</em></p>
   <p class="dialogo"><span class="nombre">Joaquín:</span> Todo bien, me gustó conocerlos. Cualquier cosa, me avisan o vengo más seguido... aunque tengo una duda. <em>—confesó con una expresión curiosa.</em></p>
@@ -126,7 +127,7 @@
   <p class="dialogo"><span class="nombre">Joaquin:</span> Entonces queda decidido: hoy inventamos nuestro propio juego. <em>—dijo levantando el balón como si fuera un trofeo.</em></p>
   <p class="narracion">Las miradas se cruzaron con mezcla de emoción y temor. No sabían qué saldría de aquella ocurrencia, pero en ese instante nació un pacto que marcaría todas sus noches. El balón quedó rodando en medio de todos, como si esperara ser parte de aquella promesa.</p>
   <p class="dialogo"><span class="nombre">Max:</span> Pero antes… ¿qué pasa si alguien se rinde? <em>—preguntó mirando de reojo a Joaquin.</em></p>
-  <p class="dialogo"><span class="nombre">Alberti:</span> El que se rinde… paga penitencia. <em>—respondió con seriedad, pero con una sonrisa escondida.</em></p>
+  <p class="dialogo"><span class="nombre">Alberto:</span> El que se rinde… paga penitencia. <em>—respondió con seriedad, pero con una sonrisa escondida.</em></p>
   <p class="dialogo"><span class="nombre">Jesus:</span> ¿Penitencia? Eso me suena a misa jajaja. <em>—rió, encogiéndose de hombros.</em></p>
   <p class="dialogo"><span class="nombre">Rosangela:</span> No, pues… penitencia como antes: correr tres vueltas a la manzana o cantar parado en la vereda. <em>—aclaró entre risas.</em></p>
   <p class="dialogo"><span class="nombre">Max:</span> Ya está, me gusta. Así nadie se hace el vivo. <em>—dijo chocando las manos con Luis.</em></p>
@@ -244,7 +245,7 @@
   <p class="narracion">Lizbeth se quedó helada, sin saber qué responder.</p>
   <p class="flashback"><span class="etiqueta">[Noche 31 de diciembre]</span> Fiesta de fin de año.</p>
   <p class="narracion">Lizbeth intentaba, una y otra vez, llamar a Lizbeth fuera de la fiesta. El ruido de la música se mezclaba con sus latidos acelerados, cuando de pronto el eco desgarrador de una sirena rompió la noche. Una ambulancia pasó como un rayo y se detuvo justo frente a la entrada. Personas comenzaron a salir de la nada, corriendo, gritando, mientras la confusión la envolvía por completo. Con las manos temblorosas sacó su celular y la pantalla iluminó su rostro con un nuevo mensaje.</p>
-  <p class="dialogo"><span class="nombre">Lizbeth:</span> ¡Contéstame, Lizbeth...! <em>—murmuró con la voz quebrada, mientras el teléfono seguía timbrando, interminable, como un grito de auxilio ignorado.</em></p>
+  <p class="dialogo"><span class="nombre">Lizbeth:</span> ¡Contéstame, Rosangela...! <em>—murmuró con la voz quebrada, mientras el teléfono seguía timbrando, interminable, como un grito de auxilio ignorado.</em></p>
   <p class="dialogo"><span class="nombre">Selena:</span> ¿Lizbeth? ¿Dónde estabas? ¡Ha ocurrido un accidente! <em>—gritó agitadamente, con los ojos desbordados de desesperación al verla.</em></p>
   <p class="narracion">De repente, otro mensaje apareció en la pantalla. Era de Dorian. Su respiración se detuvo mientras leía: <em>“Lizbeth, ¿dónde estabas? Prima, ven al techo. Jesús está muerto”.</em> La frase la atravesó como un cuchillo. Sintió que el suelo desaparecía bajo sus pies, que la fiesta entera se apagaba de golpe, y un dolor inexplicable, oscuro y brutal, se apoderaba de su pecho mientras sus manos dejando caer el teléfono.</p>
 
